examples/error-codes/implementation-defined/IMPL-CTI4-bad-static.c
struct foo {
  char x : 5;
};

int main() {
}
